# control-proxy

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
resources/: blocked_template.html  whitelist.csv
src/: blacklist.py  constants.py  extraction.py  moderation.py  types_module.py
src/domain/: constants.py  types_module.py
src/domain/ports/: whitelist.py
src/infrastructure/: logs.py
src/infrastructure/adapters/whitelist/: __init__.py  local_file.py
tests/infrastructure/adapters/whitelist/: test_local_file.py
tests/mocks/: constants.py
